<resources>
    <string name="app_name">铁锈助手</string>
    <string name="dialog_title">权限申请</string>
    <string name="dialog_msg29">我们需要文件管理权限，用于读取模组列表，编辑源文件，导入导出模组等等。</string>
    <string name="dialog_msg">我们需要存储权限，用于读取模组列表，编辑源文件，导入导出模组等等。</string>
    <string name="dialog_confirm">授权</string>
    <string name="dialog_close">退出</string>
    <string name="dialog_close2">后台</string>
    <string name="dialog_close_tip">已转到后台解压。</string>
    <string name="open_type">打开方式</string>
    <string name="parse_file_exception">文件解析异常</string>
    <string name="select_directents">选择目录</string>
    <string name="select_file">选择文件</string>
    <string name="select_image">选择图像</string>
    <string name="change_image">更换图像</string>
    <string name="del_image">移除图像</string>
    <string name="no_file_was_selected">没有选择任何文件</string>
    <string name="open">打开</string>
    <string name="create_unit_complete">单位创建完成</string>
    <string name="create_unit_failed">单位创建失败</string>
    <string name="create_uniting">正在构建单位...</string>
    <string name="dialog_ok">确定</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_title2">解压</string>
    <string name="dialog_title3">修复</string>
    <string name="dialog_repair">正在修复%1$s的信息文件...</string>
    <string name="repair_complete">修复完成</string>
    <string name="repair_failed">修复失败</string>
    <string name="dialog_unziping">正在解压%1$s...</string>
    <string name="not_find_game">无法加载模组，请先安装游戏。</string>
    <string name="not_find_mod">没有模组。</string>
    <string name="menu_title1">模组</string>
    <string name="file_name">文件名:</string>
    <string name="menu_title3">数据库</string>
    <string name="del_mod">删除</string>
    <string name="del_moding">正在删除</string>
    <string name="FileImporter">导入到铁锈助手</string>
    <string name="file_manager">文件管理器</string>
    <string name="not_find_describe">没有描述</string>
    <string name="mod_name">名称</string>
    <string name="mod_describe">描述</string>
    <string name="mod_tags">标签</string>
    <string name="create_mod_lable">创建模组</string>
    <string name="filter">过滤</string>
    <string name="search">搜索</string>
    <string name="create">创建</string>
    <string name="name_error">请输入模组名称。</string>
    <string name="unit_name_error">请输入单位名称。</string>
    <string name="database_null">此数据库无法加载。</string>
    <string name="describe_error">请输入描述。</string>
    <string name="describe_error2">请使用\\n代替换行。</string>
    <string name="directory_error">无法创建，此模组已存在。</string>
    <string name="unit_error">无法创建，此单位已存在。</string>
    <string name="folder_error">无法创建，此文件夹已存在。</string>
    <string name="file_not_exist">文件不存在。</string>
    <string name="select_game_pack">选择游戏包</string>
    <string name="set_game_pack">设置游戏包</string>
    <string name="mod_action1">编辑单位</string>
    <string name="mod_action2">编辑信息</string>
    <string name="mod_action8">解压</string>
    <string name="mod_action9">重命名</string>
    <string name="mod_action10">修复信息文件</string>
    <string name="open_action1">编辑文本</string>
    <string name="open_action2">导入模组</string>
    <string name="open_action3">解压文件</string>
    <string name="open_action4">系统默认方式打开</string>
    <string name="not_find_units">没有找到单位</string>
    <string name="not_find_units_name">没有找到名称包含 %1$s 的单位，撤销过滤</string>
    <string name="not_find_code_name">没有找到名称包含 %1$s 的代码，撤销过滤</string>
    <string name="not_find_section_name">没有找到 %1$s 节的代码，撤销过滤</string>
    <string name="not_find_units_action">撤销过滤</string>
    <string name="filtering">过滤中...</string>
    <string name="unable_open_database">无法打开数据库</string>
    <string name="enable_loop">启用循环播放</string>
    <string name="disabled_loop">禁用循环播放</string>
    <string name="noloop">[不循环]</string>
    <string name="loading_units">加载第%1$d个单位...</string>
    <string name="loading_files">加载文件...</string>
    <string name="filenum">共 %1$s 个项目</string>
    <string name="not_find_database">没有找到数据库</string>
    <string name="use_database">使用</string>
    <string name="unuse_dataabse">已使用</string>
    <string name="create_unit">创建单位</string>
    <string name="unit_path">创建路径:%1$s</string>
    <string name="key_notfind">没有找到 %1$s 键</string>
    <string name="template_num">共%1$s个模板</string>
    <string name="template_not_find_info">没有找到 template-info.txt</string>
    <string name="change_path">更改</string>
    <string name="change_path_ok">已更改创建目录。</string>
    <string name="no_enabled">未启用</string>
    <string name="symbol1">文件</string>
    <string name="copy_file_error">复制文件失败。</string>
    <string name="copy_file_error_change_directory">复制文件失败，请更改创建目录。</string>
    <string name="copy">复制</string>
    <string name="cut_off">剪切</string>
    <string name="copy_to_this">复制到此</string>
    <string name="identifier">标识符</string>
    <string name="copy_failed">复制失败</string>
    <string name="cut_failed">移动失败</string>
    <string name="cut_to_this">移动到此</string>
    <string name="cut_board_operation">剪切板操作</string>
    <string name="copy_file_name">复制文件名</string>
    <string name="copy_file_path">复制文件路径</string>
    <string name="file_operation">文件操作</string>
    <string name="copy_file_absolutely_path">复制绝对路径(以ROOT开头)</string>
    <string name="copy_file_absolutely_path_error">复制绝对路径错误。</string>
    <string name="unexpected_error">发生了一次意外错误，软键盘唤起失败</string>
    <string name="create_folder">创建文件夹</string>
    <string name="photo_album">相册</string>
    <string name="system_file_manager">文件管理器</string>
    <string name="reload_files">刷新</string>
    <string name="convert_template">制作模板</string>
    <string name="select_template">选择模板</string>
    <string name="open_game_test">测试此单位</string>
    <string name="set_action">设置活动</string>
    <string name="action">活动</string>
    <string name="attach_tip">使用此模板构建单位时，生成的附加文件。</string>
    <string name="add_attach_error">不能重复添加文件。</string>
    <string name="attach">附加</string>
    <string name="template_name">模板名称</string>
    <string name="create_template">创建模板包</string>
    <string name="template_name_error">请输入模板名称。</string>
    <string name="template_developer_error">请输入开发者。</string>
    <string name="template_description_error">请输入描述。</string>
    <string name="template_update_error">请输入更新链接。</string>
    <string name="template_version_num_error">请输入版本号。</string>
    <string name="template_version_name_error">请输入版本名。</string>
    <string name="template_developer">开发者</string>
    <string name="template_error">无法创建，此模板已存在。</string>
    <string name="template_description">描述</string>
    <string name="template_update">更新链接</string>
    <string name="template_version_name">版本名</string>
    <string name="template_version_num">版本号</string>
    <string name="code_table">代码表</string>
    <string name="upgrade_database">您使用的数据库已过时，是否升级到最新版本?</string>
    <string name="upgrade">升级</string>
    <string name="upgrade_succeeded">升级完成。</string>
    <string name="upgrade_failed">升级失败。</string>
    <string name="uncategorized">未分类</string>
    <string name="action_type1">输入</string>
    <string name="action_type2">选择文件</string>
    <string name="compiler_error1">%1$s 不是合法的%2$s。</string>
    <string name="compiler_error2">找不到引用的%1$s节。</string>
    <string name="compiler_error3">找不到名为%1$s的文件，应位于%2$s。</string>
    <string name="compiler_error4">找不到标识符%1$s。</string>
    <string name="compiler_error5">无法在%1$s节中找到%2$s键。(bug)</string>
    <string name="compiler_error7">缺少必要代码%1$s，位于%2$s节。</string>
    <string name="compiler_error8">缺少必要节%1$s。</string>
    <string name="compiler_error6">%1$s应当位于%2$s节。</string>
    <string name="compiler_error9">%1$s没有被录入。</string>
    <string name="not_save_exit">退出</string>
    <string name="saveing">正在保存%1$s...</string>
    <string name="save_complete">%1$s保存完成。</string>
    <string name="type_information">解释%1$s</string>
    <string name="create_section">创建%1$s节</string>
    <string name="create_key">创建%1$s</string>
    <string name="symbol2" translatable="false">[</string>
    <string name="symbol3" translatable="false">]</string>
    <string name="symbol4" translatable="false">,</string>
    <string name="symbol5" translatable="false">:</string>
    <string name="symbol6" translatable="false">.</string>
    <string name="symbol7" translatable="false">$</string>
    <string name="symbol8" translatable="false">\@</string>
    <string name="symbol9">格式化</string>
    <string name="symbol10">撤销</string>
    <string name="symbol11">颜色</string>
    <string name="edit_function">保存</string>
    <string name="import_error1">解压文件时出错。</string>
    <string name="import_error2">解析文件错误。</string>
    <string name="import_error3">模组已存在。</string>
    <string name="import_error4">创建模组出错。</string>
    <string name="import_effor7">不可识别的路径。</string>
    <string name="delete_unit">删除单位</string>
    <string name="delete_unit_text">要删除 %1$s 嘛? </string>
    <string name="importing">导入中...</string>
    <string name="import_name">导入</string>
    <string name="import_complete">%1$s 导入成功。</string>
    <string name="import_tip1">打开此文件(%1$s)?</string>
    <string name="import_tip2">导入此模组(%1$s)?</string>
    <string name="unit_search2">高级搜索</string>
    <string name="unit_search4">按正则表达式检索内容</string>
    <string name="unit_search1">按单位名搜索(支持通配符*和?):</string>
    <string name="unit_search3">包含内容:</string>
    <string name="editer_show_line_num">展示行号</string>
    <string name="sync_header">开发者选项</string>
    <string name="mod_title">模组</string>
    <string name="edit_title">代码编辑</string>
    <string name="template_title">模板包</string>
    <string name="reply_title">语言</string>
    <string name="developers_mode">开发者模式</string>
    <string name="developers_mode_off">面向模板，数据库开发者的选项。</string>
    <string name="developers_mode_on">已在某些功能内提供额外的选项。</string>
    <string name="get_source_code">获取源代码</string>
    <string name="source_code_prompt">在Github上获取源代码</string>
    <string name="database_directent">数据库存放目录</string>
    <string name="template_directent">模板存放目录</string>
    <string name="auto_create_nomedia">屏蔽系统图库扫描</string>
    <string name="only_load_coniant_language_template_off">其他语言模板将被隐藏。</string>
    <string name="auto_create_nomedia_off">媒体文件将被系统相册扫描。</string>
    <string name="auto_create_nomedia_on">已禁止系统相册扫描媒体文件。</string>
    <string name="auto_add_notes">自动添加注释</string>
    <string name="auto_add_notes_off">为无法识别的代码添加注释，以防游戏报错。</string>
    <string name="messages_header">常规</string>
    <string name="set_up">设置</string>
    <string name="only_load_coniant_language_template">仅加载符合语言的模板</string>
    <string name="action_type">类型</string>
    <string name="action_name">显示文本:</string>
    <string name="code_navigation">代码导航</string>
    <string name="night_mode_off">一律不自动开启。</string>
    <string name="night_mode_on">已启用深色主题。</string>
    <string name="night_mode">深色主题</string>
    <string name="game_pack">游戏包</string>
    <string name="select_the_game_pack">选择游戏包</string>
    <string name="select_the_game_package_description">在您的应用列表内设定游戏包。</string>
    <string name="donation">捐赠</string>
    <string name="sub_donation">在爱发电上捐赠铁锈助手</string>
    <string name="keep_rwmod_file_description">解压模组时，保留源文件。</string>
    <string name="keep_rwmod_file">保留源文件</string>
    <string name="setting_app_language" translatable="false">AppLanguage</string>
    <string name="setting_database_directory" translatable="false">DatabaseDirectory</string>
    <string name="setting_developer_mode" translatable="false">DeveloperMode</string>
    <string name="setting_auto_add_notes" translatable="false">AutoAddNotes</string>
    <string name="setting_template_directory" translatable="false">TemplateDirectory</string>
    <string name="setting_auto_create_nomedia" translatable="false">AutoCreateNomedia</string>
    <string name="setting_only_load_conant_language_temple" translatable="false">OnlyLoadConantLanguageTemple</string>
    <string name="setting_night_mode" translatable="false">NightMode</string>
    <string name="setting_keep_rwmod_file" translatable="false">KeepRwmodFile</string>
</resources>