<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <ListPreference
            app:defaultValue="简体中文"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="@string/setting_app_language"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/setting_night_mode"
            app:summaryOff="@string/night_mode_off"
            app:summaryOn="@string/night_mode_on"
            app:title="@string/night_mode" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/edit_title">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/setting_auto_add_notes"
            app:summaryOff="@string/auto_add_notes_off"
            app:summaryOn="@string/auto_add_notes_off"
            app:title="@string/auto_add_notes" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/game_pack">

        <PreferenceScreen
            app:key="set_game_pack"
            app:summary="@string/select_the_game_package_description"
            app:title="@string/select_the_game_pack" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/mod_title">

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/setting_auto_create_nomedia"
            app:summaryOff="@string/auto_create_nomedia_off"
            app:summaryOn="@string/auto_create_nomedia_on"
            app:title="@string/auto_create_nomedia" />

        <SwitchPreference
            app:defaultValue="true"
            app:key="@string/setting_keep_rwmod_file"
            app:summary="@string/keep_rwmod_file_description"
            app:title="@string/keep_rwmod_file" />


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/template_title">

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/setting_only_load_conant_language_temple"
            app:summaryOff="@string/only_load_coniant_language_template_off"
            app:summaryOn="@string/only_load_coniant_language_template_off"
            app:title="@string/only_load_coniant_language_template" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreference
            app:key="@string/setting_developer_mode"
            app:summaryOff="@string/developers_mode_off"
            app:summaryOn="@string/developers_mode_on"
            app:title="@string/developers_mode" />

        <EditTextPreference
            app:dependency="@string/setting_developer_mode"
            app:key="@string/setting_database_directory"
            app:title="@string/database_directent"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:dependency="@string/setting_developer_mode"
            app:key="@string/setting_template_directory"
            app:title="@string/template_directent"
            app:useSimpleSummaryProvider="true" />

        <PreferenceScreen
            app:key="get_source_code"
            app:summary="@string/source_code_prompt"
            app:title="@string/get_source_code" />

        <PreferenceScreen
            app:key="donation"
            app:summary="@string/sub_donation"
            app:title="@string/donation" />

    </PreferenceCategory>

</PreferenceScreen>