<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/save_text"
        android:icon="@mipmap/ui_save"
        android:title="@string/edit_function"
        app:showAsAction="always" />

    <item
        android:id="@+id/code_navigation"
        android:title="@string/code_navigation" />

    <item
        android:id="@+id/open_game_test"
        android:title="@string/open_game_test" />

    <item
        android:id="@+id/show_line_number"
        android:checkable="true"
        android:checked="true"
        android:title="@string/editer_show_line_num" />

    <item
        android:id="@+id/convertToTemplate"
        android:title="@string/convert_template" />


</menu>