<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/unit_search1" />

    <EditText
        android:id="@+id/unit_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/advanced_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unit_search2" />

    <LinearLayout
        android:id="@+id/advanced_view"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/rule_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_search3" />

        <EditText
            android:id="@+id/unit_rule_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/rule_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_search4" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <Button
            android:id="@+id/cancel_button_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dialog_cancel" />

        <Button
            android:id="@+id/completion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/dialog_ok" />

    </LinearLayout>

</LinearLayout>