<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/mod_item">

    <fragment
        android:id="@+id/mod_item"
        android:label="@string/menu_title1"
        android:name="com.coldmint.rust.pro.ui.ModFragment"
        tools:layout="@layout/mod_fragment"/>

    <fragment
        android:id="@+id/database_item"
        android:label="@string/menu_title3"
        android:name="com.coldmint.rust.pro.ui.DatabaseFragment"
        tools:layout="@layout/database_fragment"/>

    <fragment
        android:id="@+id/template_item"
        android:label="@string/template_title"
        android:name="com.coldmint.rust.pro.ui.TemplateFragment"
        tools:layout="@layout/template_fragemnt"/>


</navigation>