<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_describe_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_description"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="500" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_developer_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_developer"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="20" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="200">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_update_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_update"
                android:imeOptions="actionDone"
                android:inputType="textUri"
                android:maxLength="200" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_version_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_version_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="20"
                android:text="1.0" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="9">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/template_version_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/template_version_num"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="9"
                android:text="1" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/createbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />


    </LinearLayout>

</ScrollView>
