<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:counterEnabled="true"
            app:counterMaxLength="20">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/mod_name"
                android:maxLines="1"
                android:id="@+id/mod_name_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLength="20"
                android:inputType="text"
                android:imeOptions="actionNext"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textinput2"
            android:layout_below="@id/textinput1"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="8dp"
            app:counterEnabled="true"
            app:counterMaxLength="500">

            <com.google.android.material.textfield.TextInputEditText
                android:hint="@string/mod_describe"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:id="@+id/mod_describe_edit"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:maxLength="500" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createbutton"
            android:layout_below="@id/textinput2"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/create" />


    </RelativeLayout>

</ScrollView>
